--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,19 @@
 h1 {
     background-color: aqua;
     color: red;
+    padding: 10px;
 }
 
 h2 {
     background-color: yellow;
     color: red;
+    padding: 8px;
 }
 
 h3 {
     background-color: rgb(240, 229, 213);
     color: red;
+    padding: 6px;
 }
 
 .bold {
